Add auth method for jwt token generation
