# src/database/models/model.go
@@ -1,0 +1,11 @@
+package models
+
+// Model
+// Copy of gorm.Model
+// Used for improving api-doc generation performance
+type Model struct {
+	ID         int `gorm:"primary_key" json:"id"`
+	CreatedOn  int `json:"created_on"`
+	ModifiedOn int `json:"modified_on"`
+	DeletedOn  int `json:"deleted_on"`
+}
