# src/requests/auth.go
@@ -1,0 +1,6 @@
+package requests
+
+type AuthRequest struct {
+	Username string `form:"username" binding:"required"`
+	Password string `form:"password" binding:"required"`
+}
